--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
     <!--! header start  -->
     <header>
@@ -28,13 +30,13 @@
                         <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div class="header-left">
-                        <a href="#" class="logo">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div class="header-center" id="sidebar">
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link active">
+                                    <a href="index.html" class="menu-link">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -185,7 +187,7 @@
                     </div>
                     <div class="header-right">
                         <div class="header-right-links">
-                            <a href="#" class="header-account">
+                            <a href="account.html" class="header-account">
                                 <i class="bi bi-person"></i>
                             </a>
                             <button class="search-button">
@@ -207,6 +209,7 @@
         </div>
     </header>
     <!--! header end  -->
+
     <!--! modal search start  -->
     <div class="modal-search">
         <div class="modal-wrapper">
@@ -245,6 +248,39 @@
         </div>
     </div>
     <!--! modal search end  -->
+
+    <!--! modal dialog start  -->
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <button class="modal-close">
+                <i class="bi bi-x"></i>
+            </button>
+            <div class="modal-image">
+                <img src="img/modal-dialog.jpg" alt="">
+            </div>
+            <div class="popup-wrapper">
+                <div class="popup-content">
+                    <div class="popup-title">
+                        <h3>NEWSLETTER</h3>
+                    </div>
+                    <p class="popup-text">
+                        Sign up to our newsletter and get exclusive deals you won find any where else straight to your
+                        inbox!
+                    </p>
+                    <form class="popup-form">
+                        <input type="text" placeholder="Enter Email Address Here">
+                        <button class="btn btn-primary">SUBSCRIBE</button>
+                        <label>
+                            <input type="checkbox">
+                            <span>Don't show this popup again</span>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--! modal dialog end  -->
+
     <!--! cart start  -->
     <section class="cart-page">
         <div class="container">
@@ -304,7 +340,6 @@
                                                 </label>
                                             </li>
                                             <li>
-                                                 <h2>Cart totals
                                                 <a href="#">Change Address</a>
                                             </li>
                                         </ul>
@@ -327,6 +362,11 @@
         </div>
     </section>
     <!--! cart end  -->
+
+
+
+
+
     <!--! policy start  -->
     <section class="policy">
         <div class="container">
@@ -363,6 +403,7 @@
         </div>
     </section>
     <!--! policy end  -->
+
     <!--! footer start  -->
     <footer class="footer">
         <div class="subscribe-row">
@@ -419,7 +460,7 @@
                 <div class="footer-widgets">
                     <div class="brand-info">
                         <div class="footer-logo">
-                            <a href="#" class="logo">LOGO</a>
+                             <a href="index.html" class="logo">LOGO</a>
                         </div>
                         <div class="footer-desc">
                             <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
@@ -522,7 +563,7 @@
                 <div class="footer-copyright">
                     <div class="site-copyright">
                         <p>
-                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Emin Basbayan.
+                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Semnura.
                         </p>
                     </div>
                     <a href="#">
@@ -546,7 +587,9 @@
         </div>
     </footer>
     <!--! footer end  -->
+
     <script src="js/main.js" type="module"></script>
     <script src="js/cart.js" type="module"></script>
 </body>
+
 </html>
