--- a/single-product.html
+++ b/single-product.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce</title>
-        <!--! Glide.js Css CDN  -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css">
+    <!--! Glide.js Css CDN  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css">
     <!--! Boostrap Icons CDN  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
     <!--! header start  -->
     <header>
@@ -30,13 +32,13 @@
                         <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div class="header-left">
-                        <a href="#" class="logo">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div class="header-center" id="sidebar">
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link active">
+                                    <a href="index.html" class="menu-link">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -187,7 +189,7 @@
                     </div>
                     <div class="header-right">
                         <div class="header-right-links">
-                            <a href="#" class="header-account">
+                            <a href="account.html" class="header-account">
                                 <i class="bi bi-person"></i>
                             </a>
                             <button class="search-button">
@@ -209,6 +211,7 @@
         </div>
     </header>
     <!--! header end  -->
+
     <!--! modal search start  -->
     <div class="modal-search">
         <div class="modal-wrapper">
@@ -247,6 +250,39 @@
         </div>
     </div>
     <!--! modal search end  -->
+
+    <!--! modal dialog start  -->
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <button class="modal-close">
+                <i class="bi bi-x"></i>
+            </button>
+            <div class="modal-image">
+                <img src="img/modal-dialog.jpg" alt="">
+            </div>
+            <div class="popup-wrapper">
+                <div class="popup-content">
+                    <div class="popup-title">
+                        <h3>NEWSLETTER</h3>
+                    </div>
+                    <p class="popup-text">
+                        Sign up to our newsletter and get exclusive deals you won find any where else straight to your
+                        inbox!
+                    </p>
+                    <form class="popup-form">
+                        <input type="text" placeholder="Enter Email Address Here">
+                        <button class="btn btn-primary">SUBSCRIBE</button>
+                        <label>
+                            <input type="checkbox">
+                            <span>Don't show this popup again</span>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--! modal dialog end  -->
+
     <!--! single product start  -->
     <section class="single-product">
         <div class="container">
@@ -263,25 +299,26 @@
                     </nav>
                 </div>
                 <!-- breadcrumb end -->
-        <!-- site main start -->
-        <div class="single-content">
-            <main class="site-main">
-                <div class="product-gallery">
-                    <div class="single-image-wrapper">
-                        <img src="img/products/product2/1.png" id="single-image" alt="">
-                    </div>
-                    <div class="product-thumb">
-                        <div class="glide__track" data-glide-el="track">
-                            <ol class="gallery-thumbs glide__slides"></ol>
-                        </div>
-                        <div class="glide__arrows" data-glide-el="controls">
-                            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-                                <i class="bi bi-chevron-left"></i>
-                            </button>
-                            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-                                <i class="bi bi-chevron-right"></i>
-                            </button>
-                        </div>
+
+                <!-- site main start -->
+                <div class="single-content">
+                    <main class="site-main">
+                        <div class="product-gallery">
+                            <div class="single-image-wrapper">
+                                <img src="img/products/product2/1.png" id="single-image" alt="">
+                            </div>
+                            <div class="product-thumb">
+                                <div class="glide__track" data-glide-el="track">
+                                    <ol class="gallery-thumbs glide__slides"></ol>
+                                </div>
+                                <div class="glide__arrows" data-glide-el="controls">
+                                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                                        <i class="bi bi-chevron-left"></i>
+                                    </button>
+                                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                                        <i class="bi bi-chevron-right"></i>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="product-info">
@@ -348,8 +385,9 @@
                                         </div>
                                     </div>
                                     <div class="cart-button">
-                                        <input type="number" value="1" min="1">
-                                        <button class="btn btn-lg btn-primary">Add to cart</button>
+                                        <input type="number" value="1" min="1" id="quantity">
+                                        <button class="btn btn-lg btn-primary" id="add-to-cart" type="button">Add to
+                                            cart</button>
                                     </div>
                                     <div class="product-extra-buttons">
                                         <a href="#">
@@ -388,25 +426,26 @@
                     </main>
                 </div>
                 <!-- site main end -->
+
                 <!-- tabs start -->
                 <div class="single-tabs">
                     <ul class="tab-list">
                         <li>
-                            <a href="#" class="tab-button active">Description</a>
+                            <a href="#" class="tab-button active" data-id="desc">Description</a>
                         </li>
                         <li>
-                            <a href="#" class="tab-button">
+                            <a href="#" class="tab-button" data-id="info">
                                 Additional information
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="tab-button">
+                            <a href="#" class="tab-button" data-id="reviews">
                                 Reviews
                             </a>
                         </li>
                     </ul>
                     <div class="tab-panel">
-                        <div class="tab-panel-descriptions">
+                        <div class="tab-panel-descriptions content active" id="desc">
                             <p>Quisque varius diam vel metus mattis, id aliquam diam rhoncus. Proin vitae magna in dui
                                 finibus malesuada et at nulla. Morbi elit ex, viverra vitae ante vel, blandit feugiat
                                 ligula. Fusce fermentum iaculis nibh, at sodales leo maximus a. Nullam ultricies sodales
@@ -421,7 +460,7 @@
                                 Nullam aliquam mauris eu accumsan tincidunt. Suspendisse velit ex, aliquet vel ornare
                                 vel, dignissim a tortor.</p>
                         </div>
-                        <div class="tab-panel-information">
+                        <div class="tab-panel-information content" id="info">
                             <h3>Additional information</h3>
                             <table>
                                 <tbody>
@@ -442,7 +481,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="tab-panel-reviews">
+                        <div class="tab-panel-reviews content" id="reviews">
                             <h3>2 reviews for Basic Colored Sweatpants With Elastic Hems</h3>
                             <div class="comments">
                                 <ol class="comment-list">
@@ -555,19 +594,19 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="comment-form-comment form-comment"></div>
+                                    <div class="comment-form-comment form-comment">
                                         <label for="comment">
                                             Your review
                                             <span class="required">*</span>
                                         </label>
-                                        <textarea id="comment" cols="50" rows="10"></textarea>
+                                        <textarea id="comment-text" cols="50" rows="10" required></textarea>
                                     </div>
                                     <div class="comment-form-author form-comment">
                                         <label for="name">
                                             Name
                                             <span class="required">*</span>
                                         </label>
-                                        <input id="name" type="text">
+                                        <input id="comment-name" type="text" required>
                                     </div>
                                     <div class="comment-form-email form-comment">
                                         <label for="email">
@@ -577,7 +616,7 @@
                                         <input id="email" type="email">
                                     </div>
                                     <div class="comment-form-cookies">
-                                        <input id="cookies" type="checkbox">
+                                        <input id="cookies" name="cookies" type="checkbox">
                                         <label for="cookies">
                                             Save my name, email, and website in this browser for the next time I
                                             comment.
@@ -595,10 +634,12 @@
                     </div>
                 </div>
                 <!-- tabs end -->
+
             </div>
         </div>
     </section>
     <!--! single product end  -->
+
     <!--! campaign single start  -->
     <section class="campaign-single">
         <div class="container">
@@ -614,6 +655,7 @@
         </div>
     </section>
     <!--! campaign single end  -->
+
     <!--! policy start  -->
     <section class="policy">
         <div class="container">
@@ -650,6 +692,7 @@
         </div>
     </section>
     <!--! policy end  -->
+
     <!--! footer start  -->
     <footer class="footer">
         <div class="subscribe-row">
@@ -706,7 +749,7 @@
                 <div class="footer-widgets">
                     <div class="brand-info">
                         <div class="footer-logo">
-                            <a href="#" class="logo">LOGO</a>
+                             <a href="index.html" class="logo">LOGO</a>
                         </div>
                         <div class="footer-desc">
                             <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
@@ -809,7 +852,7 @@
                 <div class="footer-copyright">
                     <div class="site-copyright">
                         <p>
-                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Emin Basbayan.
+                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Semnura.
                         </p>
                     </div>
                     <a href="#">
@@ -834,9 +877,11 @@
     </footer>
     <!--! footer end  -->
 
+
     <script src="js/main.js" type="module"></script>
     <script src="js/single-product.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="js/glide.js" type="module"></script>
 </body>
+
 </html>
